Sat Nov  8 13:27:12 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/libexslt.3: applied improvement patch from Jonathan Wakely
	  describing the entry points.

Wed Nov  6 17:27:23 CET 2003 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/configure.js: fixed #122146

Wed Nov  5 12:25:34 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/multiple/Makefile.am: applied last fix from #125614

Tue Nov  4 19:08:53 PST 2003 William Brack <wbrack@mmm.com.hk>

	Minor enhancements to eliminate compile/test warnings
	* libxslt/xsltconfig.h.in, libexstl/exsltconfig.h.in:
	  changed macro ATTRIBUTE_UNUSED for gcc so that, if undefined,
	  it's defined as __attribute__((unused))
	* python/libxslt.c: fixed ATTRIBUTE_UNUSED to appear after
	  variable declaration
	* libxslt/preproc.c: minor change to get rid of unused var/code
	  
Tue Nov  4 14:21:06 CET 2003 Daniel Veillard <daniel@veillard.com>

	* doc/* NEWS: preparing release 1.1.0

Tue Nov  4 14:04:58 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: fixing the Document element precompilation
	  to avoid the problem raised in #125614

Tue Nov  4 01:08:17 PST 2003 William Brack <wbrack@mmm.com.hk>

	* tests/multiple/out/letter*.orig: updated to reflect change
	  to HTML output in libxml2 (formatting of <p>, bug #125093)

Sun Nov  2 09:07:32 PST 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c: fixed bug #124286 - detect invalid name on
	  template
	
Sun Nov  2 10:51:58 CET 2003 Daniel Veillard <daniel@veillard.com>

	* Makefile.am configure.in libxslt.spec.in doc/libxslt-api.xml
	  libxslt/xslt.h libxslt/xsltwin32config.h: some cleanup and trial
	  for the upcoming 1.1.0 release
	* breakpoint/*: this release removes the deprecated breakpoint library

Sat Nov  1 17:04:27 PST 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c, tests/general/bug-119.out: fixed
	  bug #125502 and corrected expected test output
	* tests/general/bug-79.out: fixed broken test (bug #123328)